--- a/PricePulse/PricePulse/Resources/Localizable.strings
+++ b/PricePulse/PricePulse/Resources/Localizable.strings
@@ -43,6 +43,19 @@
 "total" = "Total";
 
 // Comparison
+"comparison.title" = "Comparar Produtos";
+"comparison.product.a" = "Produto A";
+"comparison.product.b" = "Produto B";
+"comparison.section" = "Comparação";
+"comparison.name" = "Nome";
+"comparison.units.per.package" = "Unidades por pacote";
+"comparison.amount.per.unit" = "Quantidade por unidade (ex: 300)";
+"comparison.amount.unit" = "Unidade de quantidade";
+"comparison.price" = "Preço (R$)";
+"comparison.better.value" = "%@ oferece melhor custo-benefício.";
+"comparison.same.value" = "Ambos os produtos oferecem o mesmo custo-benefício.";
+"comparison.per.base.unit" = "R$%.2f por %@";
+
 "comparison.unit.milliliter" = "ml";
 "comparison.unit.liter" = "l";
 "comparison.unit.gram" = "g";
